# mnlp

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
animations/A_baseline/: a_tokenization.py  b_embeddings.py  c_attention.py
fine-tuning/: bert_mrpc.py  marianMT-EnFr_LoRA.py  marianMT-EnFr_QLoRA.py  marianMT-EnFr_SFT.py  translation_opus-100.py
transformer/: generate.py  gpt_checkpoint.pth  hf_bug.py  hf_bug_2.py  train.py  train_gqa.py  train_mha.py  train_mqa.py
transformer/data/: mock.txt
transformer/src/: attention.py  blocks.py  config.py  gpt.py  gpt_model.py  gqa.py  mha.py  model.py  mqa.py  types.py
