[project]
name = "mnlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaan-wq",email = "kaanucar9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (==2.2.2)",
    "wandb (>=0.25.1,<0.26.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
