[project]
name = "mnlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaan-wq",email = "kaanucar9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.4.0)",
    "wandb (>=0.25.1,<0.26.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "gradio-client (>=2.4.0,<3.0.0)",
    "huggingface-hub (>=1.9.0,<2.0.0)",
    "transformers (>=5.5.0,<6.0.0)",
    "datasets (>=4.8.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.virtualenvs]
create = false
